--- a/reclaim/templates/accounts/login.html
+++ b/reclaim/templates/accounts/login.html
@@ -1,13 +1,10 @@
 {% extends 'accounts/base.html' %}
 
 {% block title %}
-<div class="h1">Create account</div>
+<div class="h1">Login</div>
 {% endblock %}
-
 {% block content %}
-<div>
-  <br>
-  <form method="POST">
+<form method="post">
     {% csrf_token %}
     {{ form.non_field_errors }}
     {% for field in form %}
@@ -17,9 +14,8 @@
     <br>
     {% endfor %}
     <div class="mt-3">
-      <button type="submit" class="btn btn-primary">Create</button>
-      <a href="{% url 'accounts:index' %}" class="btn btn-secondary">Back</a>
+        <button type="submit" class="btn btn-primary">Login</button>
+        <a href="{% url 'accounts:index' %}" class="btn btn-secondary">Back</a>
     </div>
-  </form>
-</div>
+</form>
 {% endblock %}
