ユーザー認証においてaccount_idからemailにUSERNAME_FIELDを変更し、スーパーユーザー作成時の必須フィールドを更新。プロフィールページにトップへ戻るリンクを追加。

--- a/reclaim/templates/accounts/profile.html
+++ b/reclaim/templates/accounts/profile.html
@@ -17,5 +17,6 @@
     <p><strong>自己紹介:</strong> {{ user.profile.bio }}</p>
     <p><strong>ウェブサイト:</strong> <a href="{{ user.profile.website }}">{{ user.profile.website }}</a></p>
   </section>
+  <a href="{% url 'accounts:index' %}">トップへ戻る</a>
 </main>
 {% endblock %}
