ユーザー認証からaccount_idフィールドを削除し、emailをUSERNAME_FIELDとして使用するように変更。関連するユーザー作成メソッドを更新。

--- a/reclaim/templates/accounts/profile.html
+++ b/reclaim/templates/accounts/profile.html
@@ -1,5 +1,7 @@
 {% extends 'accounts/base.html' %}
-{% block title %}{{ user.username }}のプロフィール{% endblock %}
+{% block title %}
+{{ user.username }}のプロフィール
+{% endblock %}
 {% block content %}
 <header>
   <h1>{{ user.username }}のプロフィール</h1>
