ログアウト機能を更新し、ログアウト用のビューを追加。ログアウトページのフォームを修正し、ユーザー認証に基づくナビゲーションリンクを更新。

--- a/reclaim/templates/accounts/logout.html
+++ b/reclaim/templates/accounts/logout.html
@@ -1,15 +1,21 @@
 {% extends 'accounts/base.html' %}
 
 {% block title %}
-<div class="h1">Login</div>
-
+Login
 {% endblock %}
-{% block content %}<form action="{% url 'logout' %}" method="post" name="f_logout">
-    {% csrf_token %}
-    <input type="hidden" value="logout">
-    <a href="javascript:f_logout.submit()" class="logout nav-link">Logout</a>
-    
-</form>
-                    
 
+{% block content %}
+  <form action="{% url 'accounts:logout' %}" method="post">
+    {% csrf_token %}
+    <button type="submit" name="btn" class="btn btn-info">Logout</button>
+  </form>
+
+  <script>
+    function logout() {
+      document.f_logout.submit()
+    }
+
+
+    window.onload = logout
+  </script>
 {% endblock %}
