--- a/reclaim/templates/accounts/signup.html
+++ b/reclaim/templates/accounts/signup.html
@@ -1,25 +1,65 @@
 {% extends 'accounts/base.html' %}
 
 {% block title %}
-<div class="h1">Create account</div>
+  <div class="h1">Create account</div>
 {% endblock %}
 
 {% block content %}
-<div>
-  <br>
-  <form method="POST">
-    {% csrf_token %}
+  <div>
+    <br />
+    <form method="POST">
+      {% csrf_token %}
+      Email<input type="email" name="email" maxlength="254" required="" id="id_email" />
+      <br />
+      First_name<input type="text" name="first_name" maxlength="150" required="" id="id_first_name" />
+      <br />
+      Last_name<input type="text" name="last_name" maxlength="150" required="" id="id_last_name" />
+      <br />
+      Birth_date<input type="text" name="birth_date" id="id_birth_date" />
+      <br />
+      パスワード<input type="password" name="password1" autocomplete="new-password" aria-describedby="id_password1_helptext" id="id_password1" />
+      <br />
+      パスワード(確認用)<input type="password" name="password2" autocomplete="new-password" aria-describedby="id_password2_helptext" id="id_password2" />
+      <br />
+      {% comment %} パスワードによる認証<div id="id_usable_password" class="radiolist inline">
+        <div>
+          <label for="id_usable_password_0"><input type="radio" name="usable_password" value="true" class="radiolist inline" id="id_usable_password_0" checked="" />有効</label>
+        </div>
+        <div>
+          <label for="id_usable_password_1"><input type="radio" name="usable_password" value="false" class="radiolist inline" id="id_usable_password_1" />無効</label>
+        </div> {% endcomment %}
+      </div>
+      <br />
+      <div class="mt-3">
+        <button type="submit" class="btn btn-primary">Create</button>
+        <a href="/accounts/" class="btn btn-secondary">Back</a>
+      </div>
+    </form>
+
     {{ form.non_field_errors }}
     {% for field in form %}
-    {{ field.label }}
-    {{ field }}
-    {{ field.errors }}
-    <br>
+      {{ field.label }}
+      {% comment %} {{ field }} {% endcomment %}
+      {{ field.errors }}
+      <br />
     {% endfor %}
-    <div class="mt-3">
-      <button type="submit" class="btn btn-primary">Create</button>
-      <a href="{% url 'accounts:index' %}" class="btn btn-secondary">Back</a>
-    </div>
-  </form>
-</div>
+
+
+    {% comment %}
+    <form method="POST">
+      {% csrf_token %}
+      {{ form.non_field_errors }}
+      {% for field in form %}
+        {{ field.label }}
+        {{ field }}
+        {{ field.errors }}
+        <br />
+      {% endfor %}
+      <div class="mt-3">
+        <button type="submit" class="btn btn-primary">Create</button>
+        <a href="{% url 'accounts:index' %}" class="btn btn-secondary">Back</a>
+      </div>
+    </form>
+    {% endcomment %}
+  </div>
 {% endblock %}
