ログアウト機能のURLを整理し、不要なコードを削除。ログインおよびサインアップページのリンクを更新。

--- a/reclaim/templates/storeview/base.html
+++ b/reclaim/templates/storeview/base.html
@@ -24,19 +24,4 @@
       </div>
       {% if user.is_authenticated %}
         <div class="navbar-nav d-flex flex-row">
-          <a class="nav-link mx-3" href="{% url 'accounts:logout' %}?next={{ request.path }}">ログアウト</a>
-        </div>
-      {% else %}
-        <div class="navbar-nav d-flex flex-row">
-          <a class="nav-link mx-3" href="{% url 'accounts:login' %}?next={{ request.path }}">ログイン</a>
-        </div>
-        <div class="navbar-nav d-flex flex-row">
-          <a class="nav-link mx-3" href="{% url 'accounts:signup' %}?next={{ request.path }}">サインアップ</a>
-        </div>
-      {% endif %}
-    </nav>
-    {% block body %}
-
-    {% endblock %}
-  </body>
-</html>
+          <a class="nav-link mx-
