--- a/reclaim/templates/accounts/index.html
+++ b/reclaim/templates/accounts/index.html
@@ -20,6 +20,4 @@
 </form>
 {% else %}
 <a href="{% url 'accounts:signup' %}" class="btn btn-primary">Signup</a>
-<a href="{% url 'accounts:login' %}" class="btn btn-primary">Login</a>
-{% endif %}
-{% endblock %}
+<a href="{% url 'accounts:login' %}" class="bt
