サインアップフォームに生年月日とパスワードフィールドを追加し、エラーメッセージの表示を改善。ナビゲーションにログインおよびサインアップリンクを追加。

--- a/reclaim/templates/accounts/index.html
+++ b/reclaim/templates/accounts/index.html
@@ -20,4 +20,6 @@
 </form>
 {% else %}
 <a href="{% url 'accounts:signup' %}" class="btn btn-primary">Signup</a>
-<a href="{% url 'accounts:login' %}" class="bt
+<a href="{% url 'accounts:login' %}" class="btn btn-primary">Login</a>
+{% endif %}
+{% endblock %}
