--- a/reclaim/templates/accounts/login.html
+++ b/reclaim/templates/accounts/login.html
@@ -16,4 +16,6 @@
     <div class="mt-3">
       <button type="submit" class="btn btn-primary" value="{{ next }}">Login</button>
       <a href="{% url 'accounts:index' %}" class="btn btn-secondary">Back</a>
-    <
+    </div>
+  </form> 
+{% endblock %}
