--- a/reclaim/templates/accounts/logout.html
+++ b/reclaim/templates/accounts/logout.html
@@ -24,4 +24,10 @@
 
   <script>
     function logout() {
-    
+      document.getElementById('f_logout').submit();
+      window.location.href = "{% url 'accounts:login' %}"
+    }
+
+    window.onload = logout
+  </script>
+{% endblock %}
