--- a/reclaim/templates/items/index.html
+++ b/reclaim/templates/items/index.html
@@ -1,6 +1,6 @@
-{% extends "items/base.html" %}
+{% extends 'items/base.html' %}
 {% load static %}
 
-{% block content %}
-      hello itemsview
+{% block body %}
+  hello itemsview
 {% endblock %}
