--- a/reclaim/templates/accounts/login.html
+++ b/reclaim/templates/accounts/login.html
@@ -15,5 +15,9 @@
     {% endfor %}
     <div class="mt-3">
       <button type="submit" class="btn btn-primary" value="{{ next }}">Login</button>
+      <br>
+      <a href="{% url 'accounts:signup' %}" class="my-1 btn btn-primary">Sign Up</a>
       <a href="{% url 'accounts:index' %}" class="btn btn-secondary">Back</a>
-    <
+    </div>
+  </form> 
+{% endblock %}
