ユーザーモデルに店舗アカウントフィールドを追加し、関連するマイグレーションを作成。ナビゲーションにリストへのリンクを追加し、ログインおよびサインアップページのアクセス権限を強化。テンプレートのエラーメッセージ表示を改善。

--- a/reclaim/templates/userview/contact.html
+++ b/reclaim/templates/userview/contact.html
@@ -59,6 +59,7 @@
         </div>
         <div class="form-group">
           <label for="item">Item Name:</label>
+          <p>{{ contact.item_name }}</p>
           <input type="number" id="item_id" name="item_id" value="{{ contact.item_id }}" hidden />
         </div>
         <div class="form-group">
