--- a/reclaim/templates/accounts/index.html
+++ b/reclaim/templates/accounts/index.html
@@ -13,6 +13,7 @@
 <div class="h2">Welcome {{ user.first_name }} {{ user.last_name }}</div>
 <!-- ↓追加 -->
  <a href="{% url 'accounts:profile' %}">profile</a>
+ <a href="{% url 'userview:index' %}">リストへ戻る</a>
 <form action="{% url 'accounts:logout' %}" method="post" name="f_logout">
   {% csrf_token %}
   <input type="hidden" value="logout">
