--- a/reclaim/templates/accounts/signup.html
+++ b/reclaim/templates/accounts/signup.html
@@ -38,8 +38,8 @@
 
     {{ form.non_field_errors }}
     {% for field in form %}
-      {{ field.label }}
-      {% comment %} {{ field }} {% endcomment %}
+      {% comment %} {{ field.label }} 
+      {{ field }} {% endcomment %}
       {{ field.errors }}
       <br />
     {% endfor %}
