--- a/reclaim/templates/userview/test.html
+++ b/reclaim/templates/userview/test.html
@@ -1,17 +1,53 @@
-{% extends 'storeview/base.html' %}
-{% load django_bootstrap5 %}
-{% load static %}
-
-{% block title %}TEST{% endblock %}
-
-{% block body %}
-
-<h1 class="py-2 mx-3">TEST</h1>
-
+<p>if authenticated?</p>
 <p>
-  {% for i in object_list %}
-  {{ i.item_lost_location }}<br>
-  {% endfor %}
+  {% if user.is_authenticated %}
+    True ooooo
+  {% else %}
+    False xxxxx
+  {% endif %}
 </p>
 
-{% endblock %}
+<p>if not authenticated?</p>
+<p>
+  {% if not user.is_authenticated %}
+    True ooooo
+  {% else %}
+    False xxxxx
+  {% endif %}
+
+
+<p>if superuser?</p>
+<p>
+  {% if user.is_superuser %}
+    True ooooo
+  {% else %}
+    False xxxxx
+  {% endif %}
+</p>
+
+<p>if staff?</p>
+<p>
+  {% if user.is_staff %}
+    True ooooo
+  {% else %}
+    False xxxxx
+  {% endif %}
+</p>
+
+<p>if store?</p>
+<p>
+  {% if user.is_store %}
+    True ooooo
+  {% else %}
+    False xxxxx
+  {% endif %}
+</p>
+
+<p>if active?</p>
+<p>
+  {% if user.is_active %}
+    True ooooo
+  {% else %}
+    False xxxxx
+  {% endif %}
+</p>
