テンプレートの不要なコードを削除し、コンタクトフォームの構造を整理。ビュー関数の未使用コードを削除。

--- a/reclaim/templates/userview/test.html
+++ b/reclaim/templates/userview/test.html
@@ -16,38 +16,4 @@
   {% endif %}
 
 
-<p>if superuser?</p>
-<p>
-  {% if user.is_superuser %}
-    True ooooo
-  {% else %}
-    False xxxxx
-  {% endif %}
-</p>
-
-<p>if staff?</p>
-<p>
-  {% if user.is_staff %}
-    True ooooo
-  {% else %}
-    False xxxxx
-  {% endif %}
-</p>
-
-<p>if store?</p>
-<p>
-  {% if user.is_store %}
-    True ooooo
-  {% else %}
-    False xxxxx
-  {% endif %}
-</p>
-
-<p>if active?</p>
-<p>
-  {% if user.is_active %}
-    True ooooo
-  {% else %}
-    False xxxxx
-  {% endif %}
-</p>
+<p>if superuser?<
