--- a/reclaim/templates/userview/contact.html
+++ b/reclaim/templates/userview/contact.html
@@ -53,24 +53,4 @@
         {% csrf_token %}
         <div class="form-group">
           <label for="email">Your Email:</label>
-          <input type="email" id="email" name="email" required value="{{ user }}"/>
-          <a href="{% url 'accounts:profile' %}">異なる場合はこちらから変更してください</a>
-          {% comment %} ## TODO:edit機能をつける {% endcomment %}
-        </div>
-        <div class="form-group">
-          <label for="item">Item Name:</label>
-          <p>{{ contact.item_name }}</p>
-          <input type="number" id="item_id" name="item_id" value="{{ contact.item_id }}" hidden />
-        </div>
-        <div class="form-group">
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" rows="5" required></textarea>
-        </div>
-        <button type="submit">Send Message</button>
-      </form>
-    {% else %}
-      <p>You must be logged in to contact us about an item.</p>
-      <a href="{% url 'accounts:login' %}?next={{ request.path }}">Log in</a>
-    {% endif %}
-  </div>
-{% endblock %}
+          <input type="email" id="email" name="email" 
