--- a/reclaim/templates/userview/test.html
+++ b/reclaim/templates/userview/test.html
@@ -16,4 +16,38 @@
   {% endif %}
 
 
-<p>if superuser?<
+<p>if superuser?</p>
+<p>
+  {% if user.is_superuser %}
+    True ooooo
+  {% else %}
+    False xxxxx
+  {% endif %}
+</p>
+
+<p>if staff?</p>
+<p>
+  {% if user.is_staff %}
+    True ooooo
+  {% else %}
+    False xxxxx
+  {% endif %}
+</p>
+
+<p>if store?</p>
+<p>
+  {% if user.is_store %}
+    True ooooo
+  {% else %}
+    False xxxxx
+  {% endif %}
+</p>
+
+<p>if active?</p>
+<p>
+  {% if user.is_active %}
+    True ooooo
+  {% else %}
+    False xxxxx
+  {% endif %}
+</p>
