--- a/reclaim/templates/items/item_list.html
+++ b/reclaim/templates/items/item_list.html
@@ -15,3 +15,15 @@
     <p>{{ i.item_name }}</p>
   {% endfor %}
 {% endblock %}
+
+{% comment %} <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
+</html> {% endcomment %}
