--- a/reclaim/templates/items/index.html
+++ b/reclaim/templates/items/index.html
@@ -5,4 +5,7 @@
 {% endblock body %}
 ```
 {% comment %}
-優しい子守唄
+優しい子守唄のようなお話
+「昔々、あるところに、小さな星が一つ、夜空に輝いていました。この星は特別な力を持っていて、どんなに暗い夜でも道を照らしてくれるのです。その星は、旅人や動物たちに大切なことを教えました。『どんな道に迷っても、空を見上げれば光が見える。自分を信じて、歩き続けるんだよ』と。そしてその星は、ずっとずっとみんなを見守り続けたのです。」
+{% endcomment %}
+```
