--- a/reclaim/templates/accounts/profile.html
+++ b/reclaim/templates/accounts/profile.html
@@ -32,4 +32,7 @@
         {% endfor %}
       {% endif %}
     </section>
-    <a href="
+    <a href="{% url 'userview:index' %}" class="btn btn-primary">リストへ飛ぶ</a>
+    <a href="{% url 'accounts:index' %}" class="btn btn-secondary">トップへ戻る</a>
+  </main>
+{% endblock %}
