--- a/reclaim/templates/accounts/signup.html
+++ b/reclaim/templates/accounts/signup.html
@@ -15,4 +15,51 @@
       <br />
       Last_name<input type="text" name="last_name" maxlength="150" required="" id="id_last_name" />
       <br />
-      Birth_date
+      Birth_date<input type="text" name="birth_date" id="id_birth_date" />
+      <br />
+      パスワード<input type="password" name="password1" autocomplete="new-password" aria-describedby="id_password1_helptext" id="id_password1" />
+      <br />
+      パスワード(確認用)<input type="password" name="password2" autocomplete="new-password" aria-describedby="id_password2_helptext" id="id_password2" />
+      <br />
+      {% comment %} パスワードによる認証<div id="id_usable_password" class="radiolist inline">
+        <div>
+          <label for="id_usable_password_0"><input type="radio" name="usable_password" value="true" class="radiolist inline" id="id_usable_password_0" checked="" />有効</label>
+        </div>
+        <div>
+          <label for="id_usable_password_1"><input type="radio" name="usable_password" value="false" class="radiolist inline" id="id_usable_password_1" />無効</label>
+        </div> {% endcomment %}
+      </div>
+      <br />
+      <div class="mt-3">
+        <button type="submit" class="btn btn-primary">Create</button>
+        <a href="/accounts/" class="btn btn-secondary">Back</a>
+      </div>
+    </form>
+
+    {{ form.non_field_errors }}
+    {% for field in form %}
+      {% comment %} {{ field.label }} 
+      {{ field }} {% endcomment %}
+      {{ field.errors }}
+      <br />
+    {% endfor %}
+
+
+    {% comment %}
+    <form method="POST">
+      {% csrf_token %}
+      {{ form.non_field_errors }}
+      {% for field in form %}
+        {{ field.label }}
+        {{ field }}
+        {{ field.errors }}
+        <br />
+      {% endfor %}
+      <div class="mt-3">
+        <button type="submit" class="btn btn-primary">Create</button>
+        <a href="{% url 'accounts:index' %}" class="btn btn-secondary">Back</a>
+      </div>
+    </form>
+    {% endcomment %}
+  </div>
+{% endblock %}
