--- a/reclaim/templates/userview/contact.html
+++ b/reclaim/templates/userview/contact.html
@@ -55,7 +55,7 @@
           <label for="email">Your Email:</label>
           <input type="email" id="email" name="email" required value="{{ user }}"/>
           <a href="{% url 'accounts:profile' %}">異なる場合はこちらから変更してください</a>
-          {% comment %} ## TODO:edit機能をつける {% endcomment %}
+          {% comment %} # TODO edit機能をつける {% endcomment %}
         </div>
         <div class="form-group">
           <label for="item">Item Name:</label>
