--- a/reclaim/templates/storeview/form.html
+++ b/reclaim/templates/storeview/form.html
@@ -16,6 +16,7 @@
 
     <div class="mb-3">
       <label for="id_item_category_id" class="form-label">カテゴリー:</label>
+      {{ form.item_category_id.errors }}
       <select name="item_category_id" required="" id="id_item_category_id" class="form-select">
         <option value="" selected="">---------</option>
         {% for i in item_category_object_list %}
@@ -26,6 +27,7 @@
 
     <div class="mb-3">
       <label for="id_item_tag_id" class="form-label">タグ:</label>
+      {{ form.item_tag_id.errors }}
       <select name="item_tag_id" required="" id="id_item_tag_id" class="form-select">
         <option value="" selected="">---------</option>
         {% for i in tag_object_list %}
@@ -36,36 +38,44 @@
 
     <div class="mb-3">
       <label for="id_item_name" class="form-label">名前:</label>
+      {{ form.item_name.errors }}
       <input type="text" name="item_name" maxlength="100" required="" id="id_item_name" class="form-control" />
     </div>
 
     <div class="mb-3">
       <label for="id_item_date" class="form-label">発見日時:</label>
-      <input type="text" name="item_date" required="" id="id_item_date" class="form-control hasDatepicker" />
+      {% comment %} # TODO ピッカー対応させる {% endcomment %}
+      {{ form.item_date.errors }}
+      <input type="datetime-local" name="item_date" required="" id="id_item_date" class="form-control hasDatepicker" />
     </div>
 
     <div class="mb-3">
       <label for="id_item_lost_location" class="form-label">発見場所:</label>
+      {{ form.item_lost_location.errors }}
       <input type="text" name="item_lost_location" maxlength="100" required="" id="id_item_lost_location" class="form-control" />
     </div>
 
     <div class="mb-3">
       <label for="id_item_description" class="form-label">説明文:</label>
+      {{ form.item_description.errors }}
       <textarea name="item_description" cols="40" rows="10" required="" id="id_item_description" class="form-control"></textarea>
     </div>
 
     <div class="mb-3">
       <label for="id_item_image" class="form-label">画像:</label>
+      {{ form.item_image.errors }}
       <input type="file" name="item_image" accept="image/*" id="id_item_image" class="form-control" />
     </div>
 
     <div class="mb-3 form-check">
       <label for="id_item_status" class="form-check-label">発見されたか:</label>
+      {{ form.item_status.errors }}
       <input type="checkbox" name="item_status" id="id_item_status" class="form-check-input" />
     </div>
 
     <div class="mb-3">
       <label for="id_item_founder" class="form-label">発見者:</label>
+      {{ form.item_founder.errors }}
       <select name="item_founder" required="" id="id_item_founder" class="form-select">
         <option value="{{ request.user.id }}" selected="">{{ request.user.email }}</option>
       </select>
